fix(examples): 38-cf-common-pool-blocking registers the future it blocks on
Cause: recording-fed detector called with arguments it discards (issue #346,
cause 1).

The demonstration called

  cfCommonPoolBlockingMonitor().recordBlockingCall(null, Thread.currentThread(),
                                                   "fetchData.get")

from the test body. That is a no-op twice over. recordBlockingCall returns
immediately when the future is null, and it also ignores any future that was not
first registered through recordCommonPoolSubmission - deliberately, because
waiting on a future from an executor you own starves nobody, and reporting that
would flag ordinary code. The demonstration supplied neither the future nor the
registration, so the run reported nothing and stayed green.

ReportService gains observeCommonPool: two no-op-by-default BiConsumers, called
from inside fetchData with the real inner future, the registration first and the
blocking call immediately before the get(). The order is part of the detector's
contract rather than a matter of style, and the comment there says so.

Verified by running the module with the JUnit DisabledCondition deactivated:
before, testGenerateReport_concurrent_detectsPoolBlocking passed; after, it fails
with

  Thread 'ForkJoinPool.commonPool-worker-1' made blocking call (Future.get) inside
  CompletableFuture 'fetchData' running on the common ForkJoinPool

naming real common-pool workers rather than the async-test worker the old call
would have named if it had recorded anything at all.

Two ordinary @Test methods run in CI and pin both directions: generateReport()
reports, and a wait on a future from a dedicated executor stays silent. The
second is the one that matters, because it is the case the detector's narrowness
exists for.

invocations drops from 50 to 5, only to keep the output readable: the detector
emits one line per blocking call with no deduplication, so 400 executions
produced 400 near-identical lines. Filed as